--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.7",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
